<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Action-bar looking view -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_dimen"
        android:background="@color/bg">

        <ImageView
            android:id="@+id/drawer_indicator"
            android:layout_width="@dimen/actionbar_dimen"
            android:layout_height="@dimen/actionbar_dimen"
            android:layout_gravity="start"
            android:background="@drawable/drawer_selector"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/indicator_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_dimen"
            android:layout_gravity="center"
            android:background="@drawable/drawer_selector"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textSize="@dimen/menu_text_size"
            android:text="Image Cloud"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </FrameLayout>

    <!-- Content -->
    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/view_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <LinearLayout
            android:id="@+id/layout_menu"
            android:layout_width="@dimen/menu_width"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:layout_gravity="start"
            android:orientation="vertical"
            android:paddingLeft="@dimen/menu_margin_left"
            android:paddingTop="@dimen/menu_margin_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height">

                <RelativeLayout
                    android:layout_width="@dimen/menu_layout_icon_size"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/menu_icon_size"
                        android:layout_height="@dimen/menu_icon_size"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_home_white" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_home"
                    style="@style/menu_text"
                    android:text="@string/home" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height">

                <RelativeLayout
                    android:layout_width="@dimen/menu_layout_icon_size"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/menu_icon_size"
                        android:layout_height="@dimen/menu_icon_size"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_photo_camera_white" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_capture"
                    style="@style/menu_text"
                    android:text="@string/capture" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height">

                <RelativeLayout
                    android:layout_width="@dimen/menu_layout_icon_size"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/menu_icon_size"
                        android:layout_height="@dimen/menu_icon_size"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_sync_white" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_sync"
                    style="@style/menu_text"
                    android:text="@string/sync" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height">

                <RelativeLayout
                    android:layout_width="@dimen/menu_layout_icon_size"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/menu_icon_size"
                        android:layout_height="@dimen/menu_icon_size"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_photo_library_white" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_library"
                    style="@style/menu_text"
                    android:text="@string/library" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_height">

                <RelativeLayout
                    android:layout_width="@dimen/menu_layout_icon_size"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/menu_icon_size"
                        android:layout_height="@dimen/menu_icon_size"
                        android:layout_centerVertical="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_logout_white" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_logout"
                    style="@style/menu_text"
                    android:text="@string/logout" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
